@@ -1,3 +1,10 @@
+2011-03-13 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc2.cc:
+	  Preparations for rematerialization support in new allocator.
+	* src/z80/ralloc.c:
+	  Old register allocator cleanup.
+
 2011-03-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCopt.c,
